tests/transpiler/x/cpp/fun_expr_in_let.cpp
// Generated by Mochi transpiler v0.10.32 on 2025-07-21 11:04:38 GMT+7
#include <iostream>
#include <string>
#include <sstream>

auto square = [=](int x) { return (x * x); };

int main() {
    { std::ostringstream __ss; __ss << std::boolalpha; if(false) __ss << " "; __ss << square(6); auto __line = __ss.str(); if(!__line.empty() && __line.back() == ' ') __line.pop_back(); std::cout << __line << std::endl; }
    return 0;
}
